<resources>
    <string name="app_name">AstroWeather</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Sun_Tab_Text">Sun</string>
    <string name="Moon_Tab_Text">Moon</string>
    <string name="Settings_Tab_Text">Settings</string>
    <string name="Sun_Moon_Tab_Text">Sun/Moon</string>
    <string name="Tablet_Tab_Text"><![CDATA[Sun, Moon & Settings]]></string>
    <string name="current_time_text">Current time:</string>
    <string name="location_text">Location:</string>
    <string name="sunrise_text">Sunrise</string>
    <string name="azimuth">Azimuth</string>
    <string name="sunset_text">Sunset</string>
    <string name="dusk_text">Dusk</string>
    <string name="dawn_text">Dawn</string>
    <string name="test">TEST</string>
    <string name="moonrise_text">Moonrise</string>
    <string name="moonset_text">Moonset</string>
    <string name="new_moon_text">New Moon</string>
    <string name="full_moon_text">Full Moon</string>
    <string name="moon_phase_text">Moon Phase</string>
    <string name="lunar_day_text">Lunar Day</string>
    <string name="latitude_text">Latitude</string>
    <string name="longitude_text">Longitude</string>
    <string name="interval_text">Update Interval (minutes)</string>
    <string name="accept_button_text">Accept</string>
    <string name="BasicDataText">Basic Data</string>
    <string name="AdditionalDataFragment">Additional Data</string>
    <string name="IncomingDaysText">Incoming Days Data</string>
    <string name="WeatherDataText">Weather Data</string>
    <string name="IncomingDaysDataText">Incoming Days</string>
    <string name="AllWeatherDataText">Weather</string>
    <string name="LocationText">Location</string>
    <string name="longitude_weather_text">Longitude</string>
    <string name="latitude_weather_text">Latitude</string>
    <string name="empty" />
    <string name="temperature">Temperature</string>
    <string name="PressureText">Pressure</string>
    <string name="Description_text">Description</string>
    <string name="Icon_text">Image</string>
    <string name="wind_speed_text">Wind Speed</string>
    <string name="wind_direction_text">Wind Direction</string>
    <string name="humidity_text">Humidity</string>
    <string name="visibility_text">Visibility</string>
    <string name="location_weather_text">Location for Weather</string>
    <string name="Units_text">Units</string>
    <string name="day_temp">Temperature (day)</string>
    <string name="night_temp">Temperature (night)</string>
    <string name="weather_text_incom">Weather</string>
</resources>